--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
@@ -44,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "tailwindcss": "^3.4.1"
   }
